// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSwitcher matches the snapshot in English 1`] = `
<View
  style={
    {
      "backgroundColor": "#373848",
      "borderRadius": 16,
      "marginBottom": 14,
      "padding": 16,
    }
  }
>
  <Text
    style={
      {
        "color": "#fff",
        "fontSize": 16,
        "fontWeight": "700",
        "marginBottom": 4,
      }
    }
  >
    Language
  </Text>
  <Text
    style={
      {
        "color": "#D3D6E8",
        "fontSize": 13,
        "lineHeight": 19,
        "marginBottom": 14,
      }
    }
  >
    Choose the language used across the app
  </Text>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      accessibilityLabel="English"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#2A2F63",
          "borderColor": "#8A91FF",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "opacity": 1,
          "paddingHorizontal": 14,
          "paddingVertical": 12,
        }
      }
      testID="language-option-en"
    >
      <Text
        style={
          [
            {
              "color": "#DDE1FF",
              "fontSize": 14,
              "fontWeight": "600",
            },
            {
              "color": "#fff",
              "fontWeight": "700",
            },
          ]
        }
      >
        English
      </Text>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#8A91FF",
              "fontSize": 18,
            },
            undefined,
            {
              "fontFamily": "ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
    <View
      accessibilityLabel="Français"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#1F2140",
          "borderColor": "#3E4470",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "opacity": 1,
          "paddingHorizontal": 14,
          "paddingVertical": 12,
        }
      }
      testID="language-option-fr"
    >
      <Text
        style={
          [
            {
              "color": "#DDE1FF",
              "fontSize": 14,
              "fontWeight": "600",
            },
            false,
          ]
        }
      >
        Français
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "#B8BBD6",
        "fontSize": 12,
        "marginTop": 14,
      }
    }
    testID="language-current"
  >
    Current: English
  </Text>
</View>
`;

exports[`LanguageSwitcher matches the snapshot in French 1`] = `
<View
  style={
    {
      "backgroundColor": "#373848",
      "borderRadius": 16,
      "marginBottom": 14,
      "padding": 16,
    }
  }
>
  <Text
    style={
      {
        "color": "#fff",
        "fontSize": 16,
        "fontWeight": "700",
        "marginBottom": 4,
      }
    }
  >
    Langue
  </Text>
  <Text
    style={
      {
        "color": "#D3D6E8",
        "fontSize": 13,
        "lineHeight": 19,
        "marginBottom": 14,
      }
    }
  >
    Choisissez la langue utilisée dans l'application
  </Text>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      accessibilityLabel="English"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#1F2140",
          "borderColor": "#3E4470",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "opacity": 1,
          "paddingHorizontal": 14,
          "paddingVertical": 12,
        }
      }
      testID="language-option-en"
    >
      <Text
        style={
          [
            {
              "color": "#DDE1FF",
              "fontSize": 14,
              "fontWeight": "600",
            },
            false,
          ]
        }
      >
        English
      </Text>
    </View>
    <View
      accessibilityLabel="Français"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#2A2F63",
          "borderColor": "#8A91FF",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "opacity": 1,
          "paddingHorizontal": 14,
          "paddingVertical": 12,
        }
      }
      testID="language-option-fr"
    >
      <Text
        style={
          [
            {
              "color": "#DDE1FF",
              "fontSize": 14,
              "fontWeight": "600",
            },
            {
              "color": "#fff",
              "fontWeight": "700",
            },
          ]
        }
      >
        Français
      </Text>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#8A91FF",
              "fontSize": 18,
            },
            undefined,
            {
              "fontFamily": "ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "#B8BBD6",
        "fontSize": 12,
        "marginTop": 14,
      }
    }
    testID="language-current"
  >
    Actuelle : Français
  </Text>
</View>
`;
